Do not use latest image to prevent possible bugs after updates

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -17,7 +17,7 @@ services:
       - /home/pi/downloads:/downloads
 
   rtorrent:
-    image: linuxserver/rutorrent:arm32v7-latest
+    image: linuxserver/rutorrent:arm32v7-v3.9-ls47
     environment:
       - PUID=1000
       - PGID=1000
