Arreglando scripts de copiado

--- a/flexget/config.yml
+++ b/flexget/config.yml
@@ -62,8 +62,12 @@ tasks:
     exec:
       auto_escape: yes
       on_output:
-        for_entries: 'if mediainfo "{{ location }}" | grep EAC3; then ffpmeg -hwaccel auto -y -i "{{ location }}" -map 0 -c:s copy -c:v copy -c:a ac3 -b:a 640k /storage/series/"{{ tvdb_series_name }}/Season {{ series_season }}/{{ tvdb_series_name }} - {{ series_id }}{{ location | pathext }}"; else cp "{{ location }} /storage/series/"{{ tvdb_series_name }}/Season {{ series_season }}/{{ tvdb_series_name }} - {{ series_id }}{{ location | pathext }}"; fi'
-
+        for_entries: |
+          if mediainfo "{{ location }}" | grep EAC3; then
+            ffpmeg -hwaccel auto -y -i "{{ location }}" -map 0 -c:s copy -c:v copy -c:a ac3 -b:a 640k "/storage/series/{{ tvdb_series_name }}/Season {{ series_season }}/{{ tvdb_series_name }} - {{ series_id }}{{ location | pathext }}";
+          else
+            mkdir -p "/storage/series/{{ tvdb_series_name }}/Season {{ series_season }}" && cp "{{ location }}" "/storage/series/{{ tvdb_series_name }}/Season {{ series_season }}/{{ tvdb_series_name }} - {{ series_id }}{{ location | pathext }}";
+          fi
   sort_movies:
     priority: 2
     no_entries_ok: yes
@@ -77,7 +81,12 @@ tasks:
     exec:
       auto_escape: yes
       on_output:
-       for_entries: 'if mediainfo "{{ location }}" | grep EAC3; then ffpmeg -hwaccel auto -y -i "{{ location }}" -map 0 -c:s copy -c:v copy -c:a ac3 -b:a 640k /storage/pelis/"{{ movie_name }} ({{ movie_year }})/{{ movie_name }} ({{ movie_year }}){{ location | pathext }}"; else cp "{{ location }} /storage/pelis/{{ movie_name }} ({{ movie_year }})/{{ movie_name }} ({{ movie_year }}){{ location | pathext }}"; fi'
+       for_entries: |
+         if mediainfo "{{ location }}" | grep EAC3; then
+           ffpmeg -hwaccel auto -y -i "{{ location }}" -map 0 -c:s copy -c:v copy -c:a ac3 -b:a 640k "/storage/pelis/{{ movie_name }} ({{ movie_year }})/{{ movie_name }} ({{ movie_year }}){{ location | pathext }}";
+         else
+           mkdir -p "/storage/pelis/{{ movie_name }} ({{ movie_year }})" && cp "{{ location }}" "/storage/pelis/{{ movie_name }} ({{ movie_year }})/{{ movie_name }} ({{ movie_year }}){{ location | pathext }}";
+         fi
   remove_stale_torrents:
     from_transmission:
       host: transmission
